Устранил возможность множественной регистрации пользователя

--- a/services/site/src/main/resources/templates/registration.html
+++ b/services/site/src/main/resources/templates/registration.html
@@ -50,7 +50,7 @@
                 <p class="card-text">
                     Успешной учебы, Команда CheckDev.
                 </p>
-                <a th:href="@{https://t.me/checkdev_bot?start=true}" class="btn btn-primary">Открыть телеграм бота</a>
+                <a th:href="@{https://t.me/myCheckDevBot?start=true}" class="btn btn-primary">Открыть телеграм бота</a>
             </div>
         </div>
     </div>
